@@ -26,9 +26,6 @@
  *  LIABILITY, OR TORT (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY
  *  OUT OF THE USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF
  *  SUCH DAMAGE.
- *
- *
- *  $Id: CPUComponent.h,v 1.1 2008/03/14 12:12:16 debug Exp $
  */
 
 // COMPONENT(cpu)
@@ -66,6 +63,15 @@ public:
 	static string GetAttribute(const string& attributeName);
 
 
+	/**
+	 * \brief Returns the current frequency (in Hz) that the component
+	 *      runs at.
+	 *
+	 * @return      The component's frequency in Hz.
+	 */
+	virtual double GetCurrentFrequency() const;
+
+
 	/********************************************************************/
 
 	static void RunUnitTests(int& nSucceeded, int& nFailures);
@@ -80,6 +86,8 @@ protected:
 
 	const uint32_t *m_currentCodePage;
 	int		m_pageSize;
+
+	double		m_frequency;
 };
 
 
