@@ -531,6 +531,20 @@ bool Component::AddVariableString(const string& name, string* variablePointer)
 }
 
 
+bool Component::AddVariableDouble(const string& name, double* variablePointer)
+{
+	StateVariableMap::iterator it = m_stateVariables.find(name);
+	if (it != m_stateVariables.end()) {
+		assert(false);
+		return false;
+	}
+
+	m_stateVariables[name] = StateVariable(name, variablePointer);
+
+	return true;
+}
+
+
 bool Component::AddVariableUInt8(const string& name, uint8_t* variablePointer)
 {
 	StateVariableMap::iterator it = m_stateVariables.find(name);
